# wgpu-rs-try

./: Cargo.toml  index.html
.github/workflows/: static.yml
src/: lib.rs  texture.rs
