[package]
name = "wgpu-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Project Config

# Enable a small amount of optimization in debug mode
[profile.dev]
# opt-level = 1
incremental = true

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"


[lib]
crate-type = ["cdylib", "rlib"]

# Dependency

[dependencies]
wgpu = "0.18"
winit = "0.28"
cfg-if = "1"
tracing-web = "0.1.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4.21"
pollster = "0.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
tracing-wasm = "0.2.1"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

